--- a/index.html
+++ b/index.html
@@ -3,12 +3,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etiquetas de texto</title>
 </head>
 <body>
-    
+
+    <br>
+    <br>
+    <br>
+
+<!--Parrafos-->
+
+<!--Titulos-->
+
+<h1>Titulo 1</h1>
+<h2>Titulo 2</h2>
+<h3>Titulo 3</h3>
+<h4>Titulo 4</h4>
+<h5>Titulo 5</h5>
+<h6>Titulo 6</h6>
+
+<!--Edición de texto-->
+
+<stron>Texto importante o palabra clave</stron>
+<br>
+<b>Texto sin importancia destacable</b>
+<br>
+<em>Texto en cursiva importante</em>
+<br>
+<i>Texto en cursiva</i>
+<br>
+<u>Texto subrayado</u>
+<br>
+<s>Texto eliminado</s>
+<br>
+<mark>Texto resaltado</mark>
+<br>
+<span>Texto sin importancia</span>
+<br>
+<p>50 <sup>2</sup></p>
+<br>
+<p>50<sub>2</sub></p>
+
+<a href="https" target="_blank">esto es un enlace</a>
+<br>
+<hr>
+<a href="eti">enlace interno</a>
 </body>
 </html>
